# EnvSTLC

./: .gitignore  EnvSTLC.cabal  README.md
app/: Main.hs
src/Language/EnvSTLC/: Environment.hs  Eval.hs  Parser.hs  Repl.hs  Syntax.hs  Typecheck.hs
