name:                EnvSTLC
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/EnvSTLC#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , containers
  exposed-modules:     Language.EnvSTLC.Syntax
                     , Language.EnvSTLC.Typecheck
                     , Language.EnvSTLC.Environment
                     , Language.EnvSTLC.Eval
  ghc-options:         -Wall

executable EnvSTLC
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , EnvSTLC
  ghc-options:         -Wall
