name:                EnvSTLC
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/EnvSTLC#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2 && < 3
                     , text >= 1.2 && < 2
                     , containers >= 0.5 && < 1
                     , megaparsec >= 6.4 && < 7
  exposed-modules:     Language.EnvSTLC.Syntax
                     , Language.EnvSTLC.Typecheck
                     , Language.EnvSTLC.Environment
                     , Language.EnvSTLC.Eval
                     , Language.EnvSTLC.Parser
                     , Language.EnvSTLC.Repl
  ghc-options:         -Wall -O2 -fno-warn-name-shadowing

executable EnvSTLC
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , EnvSTLC
  ghc-options:         -Wall -O2 -fno-warn-name-shadowing
